Fix icon alignment

--- a/styles/components/_usa_banner.scss
+++ b/styles/components/_usa_banner.scss
@@ -27,6 +27,7 @@
 
     .icon {
       @include icon-size(12);
+      bottom: -1px;
     }
   }
 }
